--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,12 +4,17 @@ nav:
   - Getting started: install.md
   - KGTK file specification: specification.md
   - 'KGTK commands':
-      - 'connected_components': 'connected_components.md'
+      - 'cat': 'cat.md'
       - 'clean_data': 'clean_data.md'
+      - 'connected_components': 'connected_components.md'
       - 'export_gt': 'export_gt.md'
       - 'filter': 'filter.md'
       - 'generate_wikidata_triples': 'generate_wikidata_triples.md'
       - 'graph_statistics': 'stats.md'
+      - 'ifempty': 'ifempty.md'
+      - 'ifexists': 'ifexists.md'
+      - 'ifnotempty': 'ifnotempty.md'
+      - 'ifnotexists': 'ifnotexists.md'
       - 'import_conceptnet': 'import_conceptnet.md'
       - 'import_ntriples': 'import_ntriples.md'
       - 'import_wikidata': 'import_wikidata.md'
@@ -19,6 +24,7 @@ nav:
       - 'remove_columns': 'remove_col.md'
       - 'sort': 'sort.md'
       - 'text_embeddings': 'embedding.md'
+      - 'unique': 'unique.md'
       - 'validate': 'validate.md'
       - 'zconcat': 'zconcat.md'
 theme:
