set up coverage

--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,27 @@
 [tox]
-envlist = py36,py37
+envlist = py36,py37,coverage
 
 [testenv]
 platform = linux2|darwin
 changedir = tests
 #deps = -rrequirements.txt
 deps = discover
-commands = discover
-           python -m spacy download en_core_web_sm
+commands =
+    discover
+    python -m spacy download en_core_web_sm
+
+[testenv:coverage]
+deps = coverage
+commands =
+    coverage erase
+    coverage run -m unittest discover
+    coverage report --omit='.tox/*'
+    coverage html --omit='.tox/*'
 
 [testenv:docs]
-basepython = python3.7
-deps = mkdocs >= 1.7.5, < 2
-       mkdocs-material
-commands = mkdocs build --clean
-           mkdocs serve -a localhost:8080
+deps =
+    mkdocs >= 1.7.5, < 2
+    mkdocs-material
+commands =
+    mkdocs build --clean
+    mkdocs serve -a localhost:8080
