--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,33 +3,38 @@ nav:
   - Home: index.md
   - Getting started: install.md
   - KGTK file specification: specification.md
-  - 'KGTK commands':
-      - 'cat': 'cat.md'
-      - 'clean_data': 'clean_data.md'
-      - 'compact': 'compact.md'
-      - 'connected_components': 'connected_components.md'
-      - 'expand': 'expand.md'
-      - 'explode': 'explode.md'
-      - 'export_gt': 'export_gt.md'
-      - 'filter': 'filter.md'
-      - 'generate_wikidata_triples': 'generate_wikidata_triples.md'
-      - 'graph_statistics': 'stats.md'
-      - 'ifempty': 'ifempty.md'
-      - 'ifexists': 'ifexists.md'
-      - 'ifnotempty': 'ifnotempty.md'
-      - 'ifnotexists': 'ifnotexists.md'
-      - 'import_conceptnet': 'import_conceptnet.md'
-      - 'import_ntriples': 'import_ntriples.md'
-      - 'import_wikidata': 'import_wikidata.md'
-      - 'instances': 'instances.md'  
-      - 'join': 'join.md'
-      - 'reachable_nodes': 'reachable_nodes.md'
-      - 'remove_columns': 'remove_col.md'
-      - 'sort': 'sort.md'
-      - 'text_embeddings': 'embedding.md'
-      - 'unique': 'unique.md'
-      - 'validate': 'validate.md'
-      - 'zconcat': 'zconcat.md'
+  - 'Import commands':
+      - 'import_conceptnet': 'import/import_conceptnet.md'
+      - 'import_ntriples': 'import/import_ntriples.md'
+      - 'import_wikidata': 'import/import_wikidata.md'
+  - 'Export commands':
+      - 'export_gt': 'export/export_gt.md'
+      - 'generate_wikidata_triples': 'export/generate_wikidata_triples.md'
+  - 'Transformation commands':
+      - 'cat': 'transform/cat.md'
+      - 'compact': 'transform/compact.md'
+      - 'expand': 'transform/expand.md'
+      - 'explode': 'transform/explode.md'
+      - 'filter': 'transform/filter.md'
+      - 'ifempty': 'transform/ifempty.md'
+      - 'ifexists': 'transform/ifexists.md'
+      - 'ifnotempty': 'transform/ifnotempty.md'
+      - 'ifnotexists': 'transform/ifnotexists.md'
+      - 'join': 'transform/join.md'
+      - 'remove_columns': 'transform/remove_col.md'
+      - 'sort': 'transform/sort.md'
+      - 'unique': 'transform/unique.md'
+      - 'zconcat': 'transform/zconcat.md'
+  - 'Curation commands':
+      - 'clean_data': 'curate/clean_data.md'
+      - 'validate': 'curate/validate.md'
+  - 'Analysis commands':
+      - 'connected_components': 'analysis/connected_components.md'
+      - 'instances': 'analysis/instances.md'  
+      - 'graph_statistics': 'analysis/stats.md'
+      - 'reachable_nodes': 'analysis/reachable_nodes.md'
+      - 'text_embeddings': 'analysis/embedding.md'      
+     
 theme:
   name: material
 
