import wordnet docs v1

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ nav:
       - 'import_conceptnet': 'import/import_conceptnet.md'
       - 'import_ntriples': 'import/import_ntriples.md'
       - 'import_wikidata': 'import/import_wikidata.md'
+      - 'import_wordnet': 'import/import_wordnet.md'
   - 'Export commands':
       - 'export_gt': 'export/export_gt.md'
       - 'generate_wikidata_triples': 'export/generate_wikidata_triples.md'
