--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,6 +31,8 @@ nav:
       - 'reorder_columns': 'transform/reorder_columns.md'
       - 'sort': 'transform/sort.md'
       - 'unique': 'transform/unique.md'
+      - 'unreify_rdf_statements': 'transform/unreify_rdf_statements.md'
+      - 'unreify_values': 'transform/unreify_values.md'
       - 'zconcat': 'transform/zconcat.md'
   - 'Curation commands':
       - 'clean_data': 'curate/clean_data.md'
