--- a/docker/lite/Dockerfile
+++ b/docker/lite/Dockerfile
@@ -6,6 +6,6 @@ RUN apt-get update && apt-get install -y \
 
 RUN pip install jupyter
 
-RUN git clone https://github.com/usc-isi-i2/kgtk/ --branch feature/lite
+RUN git clone https://github.com/usc-isi-i2/kgtk/ --branch dev
 
 RUN cd /kgtk && python setup.py install --lite
