--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,7 +44,8 @@ nav:
       - 'graph_statistics': 'analysis/stats.md'
       - 'reachable_nodes': 'analysis/reachable_nodes.md'
       - 'text_embeddings': 'analysis/text_embedding.md'         
-     
+      - 'paths': 'analysis/paths.md'
+
 theme:
   name: material
   logo: images/kgtk_logo_200x200.png
