--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,16 +4,16 @@ nav:
   - Getting started: install.md
   - KGTK file specification: specification.md
   - 'Import commands':
-      - 'import_atomic': 'import/import_atomic.md'
-      - 'import_conceptnet': 'import/import_conceptnet.md'
-      - 'import_ntriples': 'import/import_ntriples.md'
-      - 'import_wikidata': 'import/import_wikidata.md'
-      - 'import_wordnet': 'import/import_wordnet.md'
+      - 'import-atomic': 'import/import_atomic.md'
+      - 'import-conceptnet': 'import/import_conceptnet.md'
+      - 'import-ntriples': 'import/import_ntriples.md'
+      - 'import-wikidata': 'import/import_wikidata.md'
+      - 'import-wordnet': 'import/import_wordnet.md'
   - 'Export commands':
-      - 'export_gt': 'export/export_gt.md'
+      - 'export-gt': 'export/export_gt.md'
       - 'generate_wikidata_triples': 'export/generate_wikidata_triples.md'
   - 'Transformation commands':
-      - 'add_id': 'transform/add_id.md'
+      - 'add-id': 'transform/add_id.md'
       - 'cat': 'transform/cat.md'
       - 'compact': 'transform/compact.md'
       - 'expand': 'transform/expand.md'
@@ -27,23 +27,23 @@ nav:
       - 'join': 'transform/join.md'
       - 'lift': 'transform/lift.md'
       - 'md': 'transform/md.md'
-      - 'remove_columns': 'transform/remove_columns.md'
-      - 'rename_columns': 'transform/rename_columns.md'
-      - 'reorder_columns': 'transform/reorder_columns.md'
+      - 'remove-columns': 'transform/remove_columns.md'
+      - 'rename-columns': 'transform/rename_columns.md'
+      - 'reorder-columns': 'transform/reorder_columns.md'
       - 'sort': 'transform/sort.md'
       - 'unique': 'transform/unique.md'
-      - 'unreify_rdf_statements': 'transform/unreify_rdf_statements.md'
-      - 'unreify_values': 'transform/unreify_values.md'
+      - 'unreify-rdf-statements': 'transform/unreify_rdf_statements.md'
+      - 'unreify-values': 'transform/unreify_values.md'
       - 'zconcat': 'transform/zconcat.md'
   - 'Curation commands':
-      - 'clean_data': 'curate/clean_data.md'
+      - 'clean-data': 'curate/clean_data.md'
       - 'validate': 'curate/validate.md'
   - 'Analysis commands':
-      - 'connected_components': 'analysis/connected_components.md'
+      - 'connected-components': 'analysis/connected_components.md'
       - 'instances': 'analysis/instances.md'  
-      - 'graph_statistics': 'analysis/stats.md'
-      - 'reachable_nodes': 'analysis/reachable_nodes.md'
-      - 'text_embeddings': 'analysis/text_embedding.md'         
+      - 'graph-statistics': 'analysis/stats.md'
+      - 'reachable-nodes': 'analysis/reachable_nodes.md'
+      - 'text-embeddings': 'analysis/text_embedding.md'         
      
 theme:
   name: material
