--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ commands =
 deps = coverage
 commands =
     coverage erase
-    coverage run -m unittest discover
+    coverage run --omit */site-packages/* -m unittest discover
     coverage report --omit='.tox/*'
     coverage html --omit='.tox/*'
 
