--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
 script:
 - python -m spacy download en_core_web_sm
 - cd kgtk/tests
-- coverage run -m unittest discover
+- coverage --omit */site-packages/* run -m unittest discover
 after_success:
 - coveralls
 notifications:
